tests/invalid/data_loader_missing_loader_id.esm
{
  "esm": "0.1.0",
  "metadata": {
    "name": "DataLoaderMissingSource",
    "description": "Test case: data loader missing required 'source' field",
    "authors": ["Test Suite"]
  },

  "data_loaders": {
    "BadLoader": {
      "kind": "grid",
      "variables": {
        "T": { "file_variable": "T", "units": "K" }
      }
    }
  },

  "models": {
    "TestModel": {
      "variables": {
        "x": { "type": "state", "units": "1", "default": 1.0 }
      },
      "equations": [
        {
          "lhs": { "op": "D", "args": ["x"], "wrt": "t" },
          "rhs": { "op": "*", "args": [-0.1, "x"] }
        }
      ]
    }
  }
}
